Mobile navigation: fix border cut off

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -38,6 +38,7 @@ $footer-height: 240px;
         width: 100%;
         height: 100%;
         padding: 0 24px;
+        box-sizing: border-box;
       }
       @include grid.in-phone-layout {
         padding: 0 16px;
